<resources>
    <string name="app_name">drink-recommender-app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q1_title">Question 1</string>
    <string name="q1_question">What is your gender?</string>
    <string name="q1_opt1">Female</string>
    <string name="q1_opt2">Male</string>
    <string name="q1_opt3">Other</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <string name="questionNumber">Question %1$d</string>
    <string name="drinkRecommendation">Drink recommendation: %1$s</string>
    <string name="image_of_recommended_drink">Image of recommended drink</string>
    <string name="please_select_preferred_drink">Please select preferred drink:</string>
    <string name="choice_beer">beer</string>
    <string name="choice_wine">wine</string>
    <string name="choice_soda">soda</string>
    <string name="choice_water">water</string>
</resources>
