<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentDrinkMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/drink_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_preferred_drink"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/choiceBeer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/choice_beer"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drink_menu_title"
        app:srcCompat="@drawable/beer" />

    <ImageView
        android:id="@+id/choiceWine"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/choice_wine"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/choiceBeer"
        app:layout_constraintTop_toBottomOf="@+id/drink_menu_title"
        app:srcCompat="@drawable/wine" />

    <ImageView
        android:id="@+id/choiceSoda"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/choice_soda"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceBeer"
        app:srcCompat="@drawable/soda" />

    <ImageView
        android:id="@+id/choiceWater"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/choice_water"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/choiceSoda"
        app:layout_constraintTop_toBottomOf="@+id/choiceWine"
        app:srcCompat="@drawable/water" />

</androidx.constraintlayout.widget.ConstraintLayout>